# sparkInsight-shs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spark-insight-design.md
.github/workflows/: ci.yml
examples/eventlogs/: local-0001.json  local-0002.json
src/spark_insight/: __init__.py  __main__.py  cli.py
src/spark_insight/core/: __init__.py  cache.py  diff.py  models.py  parser.py  query.py  service.py  utils.py
src/spark_insight/llm/: __init__.py  service.py
src/spark_insight/mcp/: __init__.py  server.py
src/spark_insight/server/: app.py  deps.py
src/spark_insight/server/routes/: ai.py  insight.py  shs.py
src/spark_insight/storage/: __init__.py  base.py  local.py
src/spark_insight/ui/: __init__.py  dash_app.py
src/spark_insight/ui/components/: __init__.py
tests/: test_api.py  test_cache.py  test_cli.py  test_parser.py  test_query.py
